[package]
name = "deno_doctest"
version = "0.1.0"
authors = ["iykekings <iykekings36@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
lazy_static = "1.4.0"
regex = "1.3.9"
serde_json = { version = "1.0.52", features = [ "preserve_order" ] }
structopt = "0.3.16"
