[package]
name = "deno_doctest"
version = "0.1.0"
authors = ["iykekings <iykekings36@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.1"
lazy_static = "1.4.0"
regex = "1.3.9"
serde_json = { version = "1.0.52", features = [ "preserve_order" ] }
swc_ecmascript = { version ="0.8.4", features = ["parser", "transforms", "utils", "visit"]}
structopt = "0.3.18"
jsdoc = "0.6.0"
swc_common = "0.10.3"
